syntax = "proto3";

package user_info;
option go_package = "study/proto/user_info";

message UserInfo {
    message User {
        string username = 1;
        uint32 age      = 2;
        string graduate = 3;
    }
    
    repeated User user_list = 1;
}
